移除Cloth Config依赖（v1.5）：自写MWConfigManager（Gson读写monsterwaves.json）+MWConfig去注解单例+LootConfigLoader改Gson标准json去自动热重载+删GUI/依赖/前置；配置仅文件+指令